[gd_scene load_steps=7 format=3 uid="uid://yogap3ahmaoo"]

[ext_resource type="Script" uid="uid://c14qki5apuamm" path="res://script/tree_top_area.gd" id="1_d1qw7"]
[ext_resource type="FontFile" uid="uid://bnlkwk86tx4w1" path="res://font/Bruce Forever.ttf" id="2_d1qw7"]
[ext_resource type="Texture2D" uid="uid://cxtnr4vtn7qqb" path="res://assets/prop/big_tree.PNG" id="2_oumj0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oumj0"]
size = Vector2(118.2, 106.2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d1qw7"]
size = Vector2(76.2, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6fcm"]
size = Vector2(58.4, 47.8)

[node name="TreeTopArea" type="Area2D"]
script = ExtResource("1_d1qw7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(229, -578)
scale = Vector2(1.15, 1.15)
texture = ExtResource("2_oumj0")

[node name="InteractionLabel" type="Label" parent="."]
offset_left = 228.0
offset_top = -557.0
offset_right = 710.0
offset_bottom = -522.0
theme_override_fonts/font = ExtResource("2_d1qw7")
theme_override_font_sizes/font_size = 30
text = "Press F for Takedown"

[node name="TakedownDetection" type="Area2D" parent="."]
position = Vector2(771, -276)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TakedownDetection"]
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_oumj0")
debug_color = Color(0.990868, 0, 0.272927, 0.42)

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2(213, -712)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_d1qw7")
debug_color = Color(0.425841, 0.459473, 1, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(229, -888)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_i6fcm")
debug_color = Color(0.41888, 0.461975, 1, 0.42)
